<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="0dp">

        <TextView
            android:id="@+id/tv_scanLeaf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_faq"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold"
            android:contentDescription="@string/title_analyze"
            android:layout_gravity="center"
            android:padding="0dp"
            android:layout_margin="0dp"/>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/line_toolbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_grey"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/tvQuest_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/question_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
    <TextView
        android:id="@+id/tvAnswer_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="12dp"
        android:text="@string/answer_1"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/tvQuest_1"/>

    <TextView
        android:id="@+id/tvQuest_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/question_2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/tvAnswer_1"/>
    <TextView
        android:id="@+id/tvAnswer_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="12dp"
        android:text="@string/answer_2"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/tvQuest_2"/>

    <TextView
        android:id="@+id/tvQuest_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/question_3"
        android:textSize="16sp"
        android:textStyle="bold"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/tvAnswer_2"/>
    <TextView
        android:id="@+id/tvAnswer_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="12dp"
        android:text="@string/answer_3"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/tvQuest_3"/>

    <TextView
        android:id="@+id/tvQuest_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/question_4"
        android:textSize="16sp"
        android:textStyle="bold"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/tvAnswer_3"/>
    <TextView
        android:id="@+id/tvAnswer_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="12dp"
        android:text="@string/answer_4"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/tvQuest_4"/>

    <TextView
        android:id="@+id/tvQuest_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/question_4"
        android:textSize="16sp"
        android:textStyle="bold"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/tvAnswer_4"/>
    <TextView
        android:id="@+id/tvAnswer_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="12dp"
        android:text="@string/answer_4"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/tvQuest_5"/>

</androidx.constraintlayout.widget.ConstraintLayout>