<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splash">

    <fragment
        android:id="@+id/splash"
        android:name="com.example.cornlab.ui.SplashFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/splash_to_home"
            app:destination="@+id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cornlab.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@+id/navigation_settings" />

        <action
            android:id="@+id/action_corn_to_detail"
            app:destination="@id/navigation_detail" />
        <action
            android:id="@+id/action_husk_to_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.cornlab.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_info">
        <action
            android:id="@+id/action_settings_to_info"
            app:destination="@id/navigation_info" />

        <action
            android:id="@+id/action_settings_to_faq"
            app:destination="@id/navigation_faq" />
    </fragment>

    <fragment
        android:id="@+id/navigation_analyze"
        android:name="com.example.cornlab.ui.analyze.AnalyzeFragment"
        android:label="@string/title_analyze"
        tools:layout="@layout/fragment_analyze" >
        <deepLink
            app:uri="app://com.example.cornlab/analyze" />
        <action
            android:id="@+id/action_analyze_to_result"
            app:destination="@+id/navigation_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.cornlab.ui.result.ResultFragment"
        android:label="@string/title_result"
        tools:layout="@layout/fragment_result" >
        <action
            android:id="@+id/action_result_to_analyze"
            app:destination="@+id/navigation_analyze" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.cornlab.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_history_to_detailHistory"
            app:destination="@id/navigation_detailHistory" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detailHistory"
        android:name="com.example.cornlab.ui.detail_history.DetailFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.cornlab.ui.detail_recom.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail"/>

    <fragment
        android:id="@+id/cornFragment"
        android:name="com.example.cornlab.ui.home.corn.CornFragment"
        android:label="Corn"
        tools:layout="@layout/fragment_home_corn" />

    <fragment
        android:id="@+id/huskFragment"
        android:name="com.example.cornlab.ui.home.husk.HuskFragment"
        android:label="Corn"
        tools:layout="@layout/fragment_home_corn" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.cornlab.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.cornlab.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.example.cornlab.ui.faq.FaqFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_info" />

</navigation>