<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/green"
        android:padding="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:padding="0dp"
            android:layout_margin="0dp"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="130dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/image_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:src="@drawable/image_logo_info"
        tools:ignore="MissingConstraints" />
    
    <TextView
        android:id="@+id/info_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="12dp"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/imgView"
        android:text="@string/text_info" />

</androidx.constraintlayout.widget.ConstraintLayout>