<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="4dp"
    app:cardElevation="3dp"
    card_view:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivImageCover"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/CircleListImage"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/image_recom"/>

        <TextView
            android:id="@+id/tvRecomName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="6dp"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toEndOf="@id/ivImageCover"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/text_title_recom"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvRecomDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="6dp"
            android:justificationMode="inter_word"
            android:maxLines="3"
            app:layout_constraintStart_toEndOf="@id/ivImageCover"
            app:layout_constraintTop_toBottomOf="@id/tvRecomName"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/text_sum_recom" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>